# invedia-buyma

./: .env.example  .gitignore  README.md  auto_scraper.yml  invedia_buyma.bat  pyproject.toml  requirements-lock.txt
bookmarklets/: F12_paste_one_line.txt  README.md  buyma_bookmarklet.txt  buyma_bookmarklet_gzip.txt  buyma_bookmarklet_loader.txt  buyma_bookmarklet_test.txt  buyma_candidates.run.js  buyma_candidates.source.js  buyma_console_oneline.js  buyma_local_copy.html  buyma_local_copy.template.html  buyma_start.html  buyma_start.template.html  install_bookmarklet.html  install_bookmarklet.template.html  sns_keyword_paste.html
docs/: 24S_SEARCH_F12.md  BUYMA_OPS_SAVE_EDITION.md  FARFETCH_CAPTURE_ANALYSIS.md  FARFETCH_SEARCH_F12.md  FUNNEL_OPS.md  INTAKE_MANUAL.md  MYTHERESA_SEARCH_F12.md  NETAPORTER_SEARCH_F12.md  NEW_CHAT_HANDOFF.md  OPERATIONS.md  PRADA_OFFICIAL_F12.md  SIMPLE_START.md  SSENSE_SEARCH_F12.md  beginner_brand_guide.md  checklist_template.md
invedia_buyma.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lib/: __init__.py  async_compat.py  brand_utils.py  buyma_automator.py  buyma_demand.py  buyma_item_parser.py  buyma_researcher.py  buyma_style_id.py  config.py  evaluate.py  file_lock.py  forex.py  funnel_policy.py  http_client.py  image_processor.py  intake.py  intake_auto.py  intake_cli.py  intake_funnel.py  intake_pipeline.py  line_notifier.py  line_webhook.py  logging_config.py  main.py  multi_source.py  notification_manager.py  product_finder.py  product_identity.py  profit_calculator.py  purchase_evaluator.py  sheet_analysis.py  sheet_manager.py  style_id_utils.py  supply_search_utils.py  supply_site_search.py  supply_url_cache.py  supply_url_finder.py  supply_url_rules.py
scripts/: build_buyma_bookmarklet.py  candidate_import.py  candidate_import_server.py  (+12 more)
(+106 files in other folders)
