[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invedia-buyma"
version = "1.0.0"
description = "BUYMA 無在庫バイヤー自動化パイプライン"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gspread>=6.0,<7",
    "google-auth>=2.0,<3",
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9", "pytest-cov>=5.0,<8", "mypy>=1.10,<2", "ruff>=0.4,<1"]
browser = ["playwright>=1.50,<2", "Pillow>=10.0,<12"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=lib --cov-report=term-missing:skip-covered --cov-report=html:htmlcov --cov-fail-under=65"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "skip"
